added the layout and task class

--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -1,10 +1,37 @@
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.cell.ChoiceBoxListCell?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
-
 <GridPane fx:controller="sample.MainController"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
 <padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
+    <Label text="Title:"
+           GridPane.columnIndex="1" GridPane.rowIndex="0"/>
 
+    <TextField fx:id="titleField"
+               GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+    <Label text="Description:"
+           GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+
+    <TextField fx:id="descField"
+               GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+
+    <Label text="Estimate:"
+           GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+
+    <TextField fx:id="estField"
+               GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+    <Label text="Owner:"
+           GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+
+
+    <ChoiceBox fx:id="ownerField" GridPane.columnIndex="1" GridPane.rowIndex="7">
+    </ChoiceBox>
+    <Button onAction="#addButton" fx:id="addBtn" text="Add" GridPane.columnIndex="1" GridPane.rowIndex="8"/>
+    <TableView fx:id="tableView" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.rowSpan="10">
+
+    <columns>
+        <TableColumn text="Tasks"/>
+    </columns>
+</TableView>
 </GridPane>
