--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -1,36 +1,75 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import javafx.scene.layout.*?>
-<GridPane fx:controller="sample.MainController"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-<padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
-    <Label text="Title:"
-           GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-    <TextField fx:id="titleField"
-               GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+<GridPane alignment="center" hgap="10" prefHeight="284.0" prefWidth="503.0" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="sample.MainController">
+<padding><Insets bottom="5.0" left="5.0" right="5.0" top="5.0" /></padding>
+    <Label prefHeight="17.0" prefWidth="34.0" text="Title:" GridPane.columnIndex="1" GridPane.rowIndex="17" />
 
-    <Label text="Estimate:"
-           GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+    <TextField fx:id="titleField" GridPane.columnIndex="2" GridPane.rowIndex="17" />
 
-    <TextField fx:id="estField"
-               GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-    <Label text="Owner:"
-           GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+    <Label prefHeight="17.0" prefWidth="62.0" text="Estimate:" GridPane.columnIndex="1" GridPane.rowIndex="18" />
+
+    <TextField fx:id="estField" GridPane.columnIndex="2" GridPane.rowIndex="18" />
+    <Label prefHeight="17.0" prefWidth="47.0" text="Owner:" GridPane.columnIndex="4" GridPane.rowIndex="17" />
 
 
-    <ChoiceBox fx:id="ownerField" GridPane.columnIndex="1" GridPane.rowIndex="5">
+    <ChoiceBox fx:id="ownerField" prefHeight="25.0" prefWidth="80.0" GridPane.columnIndex="5" GridPane.rowIndex="17">
     </ChoiceBox>
-    <Button onAction="#addButton" fx:id="addBtn" text="Add" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+    <Button fx:id="addBtn" onAction="#addButton" text="Add" GridPane.columnIndex="5" GridPane.rowIndex="18" />
 
-    <Button onAction="#upBtn" fx:id="upBtn" text="&#x2191;" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
-    <Button onAction="#downBtn" fx:id="downBtn" text="&#x2193;" GridPane.columnIndex="1" GridPane.rowIndex="8"/>
-
-
+    <Button fx:id="upBtn" onAction="#upBtn" prefHeight="25.0" prefWidth="53.0" text="↑" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+    <Button fx:id="downBtn" onAction="#downBtn" prefHeight="25.0" prefWidth="53.0" text="↓" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
 
-    <TableView fx:id="tableView" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.rowSpan="10">
+
+
+    <TableView fx:id="tableView" prefHeight="196.0" prefWidth="239.0" GridPane.columnIndex="2" GridPane.rowIndex="3" GridPane.rowSpan="10">
 
 </TableView>
+   <Label prefHeight="17.0" prefWidth="119.0" text="Task in progress" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+   <Label prefHeight="17.0" prefWidth="86.0" text="Add new task" GridPane.columnIndex="2" GridPane.rowIndex="15" />
+   <Label prefHeight="30.0" prefWidth="240.0" text="IOTaskApp" GridPane.columnIndex="2">
+      <font>
+         <Font size="20.0" />
+      </font>
+   </Label>
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+      <ColumnConstraints />
+      <ColumnConstraints />
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+      <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+      <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+      <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+      <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
 </GridPane>
